# Mahiru

./: .env  .env.example  .flake8  README.md  main.py  pyproject.toml
data/: data.json
src/: decorators.py  external_api.py  generators.py  loggers.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
